--- a/_harp/public/_shared/footer.jade
+++ b/_harp/public/_shared/footer.jade
@@ -1,2 +1,2 @@
 footer.footer(role="contentinfo")
-  p Built with <a href="http://harpjs.com">Harp</a>. Published on the <a href="http://harp.io">Harp Platform</a>.
+  p Built with <a href="http://harpjs.com">Harp</a>. Published on <a href="https://github.com/">GitHub</a> by <a href="http://wearetheplaymakers.com/">wearetheplaymakers.com</a>
